--- a/ClientDApp/angular.json
+++ b/ClientDApp/angular.json
@@ -25,6 +25,10 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.min.css",
+
               "src/styles.css"
             ],
             "scripts": []
@@ -57,6 +61,8 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "sslCert":"./SSL/server.crt",
+          "sslKey":"./SSL/server.key",
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
