End of Section 4

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -3,7 +3,8 @@
   
   "profiles": {
     
-    "https": {
+    "api": {
+      
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
