--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "Default":"Data Source=DatingApp1.db"
-  }
+  },
+  "TokenKey":"super secret unguessable key"
 }
